Prevent inline elements getting spacing within message component
This adjusts the styles so that inline `span` elements don't get
the same spacing applied to them as block elements do when they
are children of a message component.

--- a/assets/stylesheets/components/_messages.scss
+++ b/assets/stylesheets/components/_messages.scss
@@ -28,7 +28,7 @@
     margin-top: $default-spacing-unit;
   }
 
-  > *:not([type="hidden"]) + * {
+  > *:not(span):not([type="hidden"]) + * {
     margin-top: $default-spacing-unit;
     margin-bottom: 0;
   }
